--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,10 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
+                },
+                {
+                  "replace": "src/app/mapping/services/**.ts",
+                  "with": "src/app/mapping/prod/**.ts"
                 }
               ],
               "outputHashing": "all"
